--- a/Build_v6/css/main.scss
+++ b/Build_v6/css/main.scss
@@ -533,7 +533,7 @@ h6 {
 .sec-close {
     padding: 9px 10px 11px;
     border-radius: 100%;
-    border: 1px solid $gold;
+    border: 1px solid $purp;
 }
 
 .icon-info-block {
@@ -4674,7 +4674,7 @@ input[type="radio"], input[type="checkbox"] {
 
     .share-google {
         @extend .share-item;
-        background: $google-purp -2px/ 28px 28px no-repeat
+        background: $google-purp -2px/ 28px 28px no-repeat;
     }
 }
 
@@ -4939,7 +4939,7 @@ input[type="radio"], input[type="checkbox"] {
     background-color: $x-lgt-grey;
     z-index: 999;
     width: 100%;
-    padding: 23px 6.6% 80px;
+    padding: 23px 6.6% 114px;
     max-height: 100vh;
     overflow: auto;
 
@@ -5015,6 +5015,11 @@ input[type="radio"], input[type="checkbox"] {
 
     @include until ($mobile) {
         width: 100%;
+
+/*        &.last {
+            margin-bottom: 100px;
+        }
+*/
     }
 
     &.sort-filter {
@@ -5091,13 +5096,27 @@ input[type="radio"], input[type="checkbox"] {
             border-radius: 3px;
         }
 
-        &.selected {
-            border: 1px solid $purp;
+        @include at-least ($mobile) {
+            &.selected {
+                border: 1px solid $purp;
+            }
         }
     }
 
-    .filter-active {
+    .count {
         display: none;
+
+        &.show {
+            display: inline-block;
+        }
+
+        &:before {
+            content: '(';
+        }
+
+        &:after {
+            content: ')';
+        }
     }
 }
 
@@ -5180,9 +5199,12 @@ input[type="radio"], input[type="checkbox"] {
 
     @include until($tablet) {
         position: absolute;
-        padding: 8px 10px 9px;
-        right: 6.6%;
         top: 14px;
+        right: 6.6%;
+        padding: 0;
+        width: 34px;
+        height: 34px;
+        background: $close-purp center center / 10px  no-repeat;
     }
 }
 
