--- a/Build_v6/css/main.scss
+++ b/Build_v6/css/main.scss
@@ -5423,7 +5423,8 @@ input[type="radio"], input[type="checkbox"] {
     }
 
     .chkbox-item {
-        padding: 17px 21px;
+        padding: 0;
+        display: block;
 
         &:hover, &.active {
             background-color: #f5f5f5;
@@ -5435,7 +5436,8 @@ input[type="radio"], input[type="checkbox"] {
     }
 
     .chkbox-link {
-        padding-left: 0;
+        display: block;
+        padding: 17px 21px;
     }
 
     .rts-chkbox {
