--- a/Build_v6/css/main.css
+++ b/Build_v6/css/main.css
@@ -418,6 +418,36 @@ h6 {
   color: #fff;
   /*margin-left: 3px;*/ }
 
+.bag-success {
+  display: none;
+  position: absolute;
+  top: 52px;
+  right: 29px;
+  z-index: 999;
+  box-shadow: 0px 3px 14px 2px rgba(0, 0, 0, 0.05); }
+  @media screen and (max-width: 767px) {
+    .bag-success {
+      right: 2.6%; } }
+  .bag-success:before {
+    content: "";
+    bottom: auto;
+    left: auto;
+    top: -9px;
+    right: 16px;
+    margin-left: 0;
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: -1;
+    -webkit-box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.12); }
+  .bag-success .help-list {
+    padding: 15px;
+    background-color: #ffffff; }
+
 /* ____Buttons and Links_____*/
 button:focus {
   outline: none; }
@@ -2144,6 +2174,16 @@ input[type="radio"], input[type="checkbox"] {
   @media screen and (max-width: 767px) {
     .tooltip {
       margin-left: 28px; } }
+  .tooltip .tooltext {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 3px;
+    width: 140px;
+    background-color: white;
+    border: 1px solid #EAE9E9;
+    border-radius: 5px;
+    padding: 10px; }
 
 .bg-question {
   position: absolute;
