--- a/Build_v6/css/main.css
+++ b/Build_v6/css/main.css
@@ -1961,7 +1961,8 @@ input[type="radio"], input[type="checkbox"] {
   position: fixed;
   width: 100%;
   top: 0;
-  border-bottom: 1px solid #f8f8f8; }
+  border-bottom: 1px solid #f8f8f8;
+  z-index: 5; }
   @media screen and (max-width: 767px) {
     .chkout-head {
       padding: 0 6.6%; } }
@@ -2060,6 +2061,20 @@ input[type="radio"], input[type="checkbox"] {
   .chkout-content .chk-input, .acc-content .chk-input, .cc-content .chk-input {
     width: 100%;
     height: 40px; }
+  .chkout-content .chkout-wrapper, .acc-content .chkout-wrapper, .cc-content .chkout-wrapper {
+    position: relative; }
+    .chkout-content .chkout-wrapper .summary-wrapper, .acc-content .chkout-wrapper .summary-wrapper, .cc-content .chkout-wrapper .summary-wrapper {
+      position: absolute;
+      right: 0; }
+      .chkout-content .chkout-wrapper .summary-wrapper.active, .acc-content .chkout-wrapper .summary-wrapper.active, .cc-content .chkout-wrapper .summary-wrapper.active {
+        position: fixed;
+        left: 919px;
+        top: 83px; }
+        @media screen and (max-width: 1279px) {
+          .chkout-content .chkout-wrapper .summary-wrapper.active, .acc-content .chkout-wrapper .summary-wrapper.active, .cc-content .chkout-wrapper .summary-wrapper.active {
+            left: auto;
+            top: 83px;
+            right: 50px; } }
 
 .form-line {
   width: 100%; }
@@ -2197,6 +2212,7 @@ input[type="radio"], input[type="checkbox"] {
   background: url(../css/images/icons/icon-question-purp.svg) no-repeat center center/8px; }
 
 .edit-billing {
+  display: none;
   margin: 38px 0 26px; }
   .edit-billing .step-title {
     margin-bottom: 28px; }
@@ -2264,6 +2280,17 @@ input[type="radio"], input[type="checkbox"] {
     @media screen and (max-width: 767px) {
       .step .step-body, .confirmed-summary .step-body, .detail-step .step-body, .order-list .step-body, .cc-section .step-body, .cc-half-section .step-body, .order-single .step-body {
         padding: 0 24px; } }
+
+.paypal-option {
+  display: none;
+  margin-bottom: 38px; }
+
+.add-new-wrap {
+  display: none; }
+
+.cancel-link {
+  text-decoration: underline;
+  display: block; }
 
 .email-info, .logged-info {
   position: relative;
