--- a/Build_v6/css/main.scss
+++ b/Build_v6/css/main.scss
@@ -2730,6 +2730,7 @@ input[type="radio"], input[type="checkbox"] {
     width: 100%;
     top: 0;
     border-bottom: 1px solid $x-lgt-grey;
+    z-index: 5;
 
     @include until($mobile) {
         padding: 0 6.6%;
@@ -2872,6 +2873,27 @@ input[type="radio"], input[type="checkbox"] {
         width: 100%;
         height: 40px;
     }
+
+    .chkout-wrapper {
+        position: relative;
+
+        .summary-wrapper {
+            position: absolute;
+            right:0;
+
+            &.active {
+                position: fixed;
+                left: 919px;
+                top: 83px;
+
+                 @include until($med-desk) {
+                    left: auto; 
+                    top: 83px;
+                    right: 50px;
+                }
+            }
+        }
+    } 
 }
 
 .form-line {
@@ -3058,6 +3080,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .edit-billing {
+    display: none;
     margin: 38px 0 26px;
 
     .step-title {
@@ -3145,6 +3168,20 @@ input[type="radio"], input[type="checkbox"] {
             padding: 0 24px;
         } 
     }  
+}
+
+.paypal-option {
+    display: none;
+    margin-bottom: 38px;    
+}
+
+.add-new-wrap {
+    display: none;
+}
+
+.cancel-link {
+    text-decoration: underline;
+    display: block;
 }
 
 .email-info {
